# conda-env-converter

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  environment.yml  pyproject.toml
.github/workflows/: create-release.yml  python-package.yml
src/conda_env_converter/: __init__.py  __main__.py  version.py
tests/: __init__.py
tests/unit/: test_main.py
